fix description typo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: android_launchable_apps
-description: "Flutter plugin that allows you to gather informatin for user launchable android apps."
-version: 0.0.1
+description: "Flutter plugin that allows you to gather information for user launchable android apps."
+version: 0.0.2
 repository: https://github.com/ma-vai/android_launchable_apps
 
 environment:
