--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,31 @@
 include: package:flutter_lints/flutter.yaml
 
+linter:
+  # The lint rules applied to this project can be customized in the
+  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
+  # included above or to enable additional rules. A list of all available lints
+  # and their documentation is published at https://dart.dev/lints.
+  #
+  # Instead of disabling a lint rule for the entire project in the
+  # section below, it can also be suppressed for a single line of code
+  # or a specific dart file by using the `// ignore: name_of_lint` and
+  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
+  # producing the lint.
+  rules:
+    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
+    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    always_use_package_imports: true
+    avoid_void_async: true
+    cancel_subscriptions: true
+    combinators_ordering: true
+    eol_at_end_of_file: true
+    exhaustive_cases: true
+    prefer_const_constructors: true
+    prefer_const_declarations: true
+    public_member_api_docs: true
+    use_colored_box: true
+    use_decorated_box: true
+    use_named_constants: true
+    use_string_buffers: true
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
