--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -23,6 +23,18 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
+    always_use_package_imports: true
+    avoid_void_async: true
+    cancel_subscriptions: true
+    combinators_ordering: true
+    eol_at_end_of_file: true
+    exhaustive_cases: true
+    prefer_const_constructors: true
+    prefer_const_declarations: true
+    public_member_api_docs: true
+    use_colored_box: true
+    use_decorated_box: true
+    use_named_constants: true
+    use_string_buffers: true
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
