* Change methods of AndroidLaunchableApps to be static * Add the ability to query for package event stats * Add check and request permission to query for package event stats * Update example application to use the above new features. * Update changelog and versions * add .cxx to gitignore after flutter upgrade

--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,19 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    
+    <!-- needed to be able to pull launchable apps -->
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.MAIN"/>
+            <category android:name="android.intent.category.LAUNCHER"/>
+        </intent>
+    </queries>
+
+    <!-- needed for requesting permissions to query launchable app usage stats  -->
+    <uses-permission
+        android:name="android.permission.PACKAGE_USAGE_STATS"
+        tools:ignore="ProtectedPermissions" />
+
     <application
         android:label="Android Launchable Apps Example"
         android:name="${applicationName}"
